traefik/pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-limit-rps.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-limit-rps
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-limit-rps-zero
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: whoami-zero.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
